--- a/style.css
+++ b/style.css
@@ -73,7 +73,7 @@ li {
 	cursor: pointer;
 	border: none;
 	background: #f78db5;
-	background-image: linear-gradient(bottom, #f78db5 0%, #ef5a92 100%);
+	background-image: linear-gradient(to right, #f78db5 0%, #ef5a92 100%);
 	border-radius: 5px;
 	box-shadow: 0px 5px 0px 0px #c5376d, 0px 10px 5px #999;
 }
@@ -121,3 +121,16 @@ li {
 	color: black;
 	border-color: blue;
 }
+
+.tucne {
+  font-weight: bold;
+}
+
+.veta {
+  font-size: 16px;
+}
+
+.red {
+  color:red;
+}
+
